Fix >> 1024px > Edit section.quote to align with c-card widths

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -640,6 +640,9 @@ html {
               }
             }
           }
+          &.quote {
+            width: 69.6%;
+          }
         }
       }
       #container-100 {
